tests/ui/project/invalid.stderr
error: unexpected token: (foo)
  --> $DIR/invalid.rs:12:14
   |
12 |     #[project(foo)] //~ ERROR unexpected token
   |              ^^^^^
